fixed cutoff text on iphone

--- a/src/sass/_masthead.scss
+++ b/src/sass/_masthead.scss
@@ -10,7 +10,7 @@ header.masthead {
 	background-attachment: scroll;
 	background-size: cover;
 	h1 {
-		font-size: 2.25rem;
+		font-size: 1.5rem;
 	}
 	@include media-breakpoint-up(lg) {
 		height: 100vh;
